--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -1,8 +1,7 @@
 .tweeting-container {
   border-bottom: 3px solid #545149;
-  padding-bottom: 15px;
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
 }
 
 .tweeting-container label {
@@ -13,13 +12,12 @@
   border: none;
   background: none;
   resize: none;
-  height: 30px;
-  font-size: 23px;
-  width: 50%;
+  height: 50px;
+  font-size: 20px;
 }
 
 .button-counter-container {
-  padding-top: 15px;
+  padding-top: 10px;
   display: flex;
   justify-content: space-between;
   font-family: 'Bungee', cursive;
