--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,6 +1,6 @@
 nav {
   position: fixed;
-  height: 120px;
+  height: 5em; /* 120px */
   width: 100%;
   display: flex;
   justify-content: space-between;
