--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -1,23 +1,27 @@
-.tweeting-container {
-  border-bottom: 3px solid #545149;
+.new-tweet {
+  padding: 0.45em;
+}
+
+.composing-container {
+  border-bottom: 0.12em solid #545149;
   display: flex;
   flex-direction: column;
 }
 
-.tweeting-container label {
-  margin-right: 10px;
-}
-
-.tweeting-container textarea {
+.composing-container textarea {
   border: none;
   background: none;
   resize: none;
-  height: 50px;
-  font-size: 20px;
+  height: 2.5em;
+  font-size: 0.9em;
+}
+
+.composing-container textarea:focus {
+  outline: none;
 }
 
 .button-counter-container {
-  padding-top: 10px;
+  padding-top: 0.4em;
   display: flex;
   justify-content: space-between;
   font-family: 'Bungee', cursive;
@@ -26,5 +30,5 @@
 .button-counter-container button {
   color: #fff;
   background-color: #4056A1;
-  /* padding: 1px 10px 2px; */
+  cursor: pointer;
 }
