--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -2,13 +2,26 @@
   padding: 0.45em;
 }
 
-.composing-container {
+.new-tweet .error-message {
+  color: #ff0000;
+  text-align: center;
+  padding: 0.7em;
+  width: 100%;
+  max-width: 40em;
+  margin: auto;
+  margin-top: 0.6em;
+  border: 0.14em solid #ff0000;
+  display:none;
+  /* visibility: hidden; */
+}
+
+.new-tweet .composing-container {
   border-bottom: 0.12em solid #545149;
   display: flex;
   flex-direction: column;
 }
 
-.composing-container textarea {
+.new-tweet .composing-container textarea {
   border: none;
   background: none;
   resize: none;
@@ -16,18 +29,18 @@
   font-size: 0.9em;
 }
 
-.composing-container textarea:focus {
+.new-tweet .composing-container textarea:focus {
   outline: none;
 }
 
-.button-counter-container {
+.new-tweet .button-counter-container {
   padding-top: 0.4em;
   display: flex;
   justify-content: space-between;
   font-family: 'Bungee', cursive;
 }
 
-.button-counter-container button {
+.new-tweet .button-counter-container button {
   color: #fff;
   background-color: #4056A1;
   cursor: pointer;
