--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,13 +1,12 @@
 nav {
   position: fixed;
-  height: 5em; /* 120px */
+  height: 4em; /* 120px */
   width: 100%;
-  display: flex;
   justify-content: space-between;
   background-color: #4056A1;
   color: #ffffff;
   z-index: 100;
-  padding: 1.5em;
+  padding: 0.5em 1.5em;
   display: flex;
   align-items: center;
 }
