used flex style instead of float for responsive

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -27,7 +27,7 @@ body {
 
 /****** main container START ******/
 
-main {
+.container {
   width: 90%;
   margin: auto;
   background-color: #f4f1ec;
