fixed minor issues

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -92,6 +92,7 @@ body {
 #tweets-container .tweet-content {
   border-bottom: 0.12em solid #545149;
   padding: 0.3em 0.6em 1.1em;
+  word-break: break-word;
 }
 
 #tweets-container article:hover .tweet-content {
